--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "compileAnimation": "./Utils/apngasm-2.91-bin-macos/apngasm ./src/Assets/Animations/Words/compiled/*.png ./src/Assets/Animations/Words/raw/*/*.png 1 30 -l1"
+    "compileAnimation": "./Utils/apngasm-2.91-bin-macos/apngasm ./src/Assets/Animations/Words/compiled/*.png ./src/Assets/Animations/Words/raw/*/*.png 1 30 -l1",
+    "postinstall": "node Utils/patch-react-native-babelrc.js"
   },
   "dependencies": {
     "double-metaphone": "latest",
@@ -22,8 +23,10 @@
   "devDependencies": {
     "babel-jest": "23.0.0-alpha.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.2",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "^16.3.0-alpha.1",
+    "regenerator-transform": "^0.12.3"
   }
 }
