--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "compileAnimation": "./Utils/apngasm-2.91-bin-macos/apngasm ./src/Assets/Animations/Words/compiled/oriflan.png ./src/Assets/Animations/Words/raw/*/*.png 1 30 -l1",
+    "compileAnimation": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Words/raw/ -o ./src/Assets/Animations/Words/compiled/",
     "postinstall": "node Utils/patch-react-native-babelrc.js"
   },
   "dependencies": {
@@ -20,11 +20,15 @@
     "react-native-voice": "^0.2.6"
   },
   "devDependencies": {
+    "any-observable": "^0.2.0",
+    "apng-assembler": "^1.0.2",
     "babel-jest": "23.0.0-alpha.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react-native": "4.0.0",
+    "command-line-args": "^5.0.2",
     "jest": "22.4.2",
+    "listr": "^0.14.0",
     "react-test-renderer": "^16.3.0-alpha.1",
     "regenerator-transform": "^0.12.3"
   }
