React Native Update

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TroisiemePage",
-  "displayName": "Troisième Page"
+  "name": "TroisiemePagePrototype1",
+  "displayName": "TroisiemePagePrototype1"
 }
