--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "any-observable": "^0.2.0",
     "apng-assembler": "^1.0.2",
     "babel-jest": "^22.4.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react-native": "4.0.0",
