--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "double-metaphone": "^1.0.2",
     "iotdb-matcher": "^1.0.1",
     "jaro-winkler": "latest",
-    "mobx": "^4.1.0",
+    "mobx": "^4.2.0",
     "mobx-react": "^5.0.0",
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-native-motion-manager": "0.0.7",
-    "react-native-voice": "^0.2.6"
+    "react-native-voice": "^0.2.6",
+    "upng-js": "^2.1.0"
   },
   "devDependencies": {
     "any-observable": "^0.2.0",
@@ -26,11 +27,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-mobx": "^1.0.2",
     "babel-preset-react-native": "4.0.0",
     "command-line-args": "^5.0.2",
     "jest": "22.4.2",
     "listr": "^0.14.0",
     "react-test-renderer": "^16.3.2",
-    "regenerator-transform": "^0.12.3"
+    "regenerator-transform": "^0.12.3",
+    "rxjs": "^5.5.10"
   }
 }
