--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "compileAnimation": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Words/raw/ -o ./src/Assets/Animations/Words/compiled/",
+    "compileWordAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Words/raw/ -o ./src/Assets/Animations/Words/compiled/",
+    "compilePageAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Pages/raw/ -o ./src/Assets/Animations/Pages/compiled/",
     "postinstall": "node Utils/patch-react-native-babelrc.js",
     "ios:build": "react-native bundle --entry-file ./index.js  --bundle-output ./ios/main.jsbundle --assets-dest ./ios/ --platform ios"
   },
@@ -16,12 +17,11 @@
     "mobx": "^4.2.0",
     "mobx-react": "^5.0.0",
     "path": "^0.12.7",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "0.55.2",
-    "react-native-fs": "^2.9.12",
     "react-native-motion-manager": "0.0.7",
-    "react-native-voice": "^0.2.6",
-    "upng-js": "^2.1.0"
+    "react-native-voice": "^0.2.6"
   },
   "devDependencies": {
     "any-observable": "^0.2.0",
