--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-native-motion-manager": "0.0.7",
+    "react-native-swipe-gestures": "^1.0.2",
     "react-native-voice": "^0.2.6"
   },
   "devDependencies": {
