--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "compileWordAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Words/raw/ -o ./src/Assets/Animations/Words/compiled/",
     "compilePageAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Pages/raw/ -o ./src/Assets/Animations/Pages/compiled/",
-    "postinstall": "node Utils/patch-react-native-babelrc.js",
+    "postinstall": "node Utils/patch-react-native-babelrc.js; react-native link",
     "ios:build": "react-native bundle --entry-file ./index.js  --bundle-output ./ios/main.jsbundle --assets-dest ./ios/ --platform ios"
   },
   "rnpm": {
