--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "0.55.2",
+    "react-native-modal": "^6.0.0",
     "react-native-motion-manager": "0.0.7",
     "react-native-svg": "^6.3.1",
     "react-native-swipe-gestures": "^1.0.2",
