--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.55.2",
     "react-native-modal": "^6.0.0",
     "react-native-motion-manager": "0.0.7",
+    "react-native-sound": "^0.10.9",
     "react-native-svg": "^6.3.1",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-voice": "^0.2.6",
