--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "node --expose-gc --max_old_space_size=4096  ./node_modules/react-native/local-cli/cli.js start",
     "compileWordAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Words/raw/ -o ./src/Assets/Animations/Words/compiled/",
     "compilePageAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Pages/raw/ -o ./src/Assets/Animations/Pages/compiled/",
     "compileSynonymsAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Synonyms/raw/ -o ./src/Assets/Animations/Synonyms/compiled/",
     "postinstall": "node Utils/patch-react-native-babelrc.js; react-native link",
-    "ios:build": "react-native bundle --entry-file ./index.js  --bundle-output ./ios/main.jsbundle --assets-dest ./ios/ --platform ios"
+    "ios:build": "node --expose-gc --max_old_space_size=4096 ./node_modules/react-native/local-cli/cli.js bundle --entry-file ./index.js  --bundle-output ./ios/main.jsbundle --assets-dest ./ios/ --platform ios"
   },
   "rnpm": {
     "assets": [
