--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "compilePageAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Pages/raw/ -o ./src/Assets/Animations/Pages/compiled/",
     "compileSynonymsAnimations": "node Utils/APNGCompiler.js -i ./src/Assets/Animations/Synonyms/raw/ -o ./src/Assets/Animations/Synonyms/compiled/",
     "postinstall": "node Utils/patch-react-native-babelrc.js; react-native link",
-    "ios:build": "node --expose-gc --max_old_space_size=4096 ./node_modules/react-native/local-cli/cli.js bundle --entry-file ./index.js  --bundle-output ./ios/main.jsbundle --assets-dest ./ios/ --platform ios"
+    "ios:build": "node --expose-gc --max_old_space_size=4096 ./node_modules/react-native/local-cli/cli.js bundle --reset-cache --platform ios --entry-file ./index.js  --bundle-output ./ios/main.jsbundle",
+    "postios:build": "react-native link"
   },
   "rnpm": {
     "assets": [
-      "./src/assets/fonts/"
+      "./src/Assets"
     ]
   },
   "dependencies": {
